--- a/elementos-pos-textuais/referencias.bib
+++ b/elementos-pos-textuais/referencias.bib
@@ -48,6 +48,14 @@ address = "São Paulo",
 publisher = "Blucher"
 }.
 
+
+@book{book:{91627986},
+   title =     {Medida e Integração, 2a Edição},
+   author =    {Pedro J. Fernandez},
+   publisher = {IMPA},
+   year =      {2002},
+   url =       {libgen.li/file.php?md5=8adc0397b108b380c863d39a84b4dd06}}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @article{BROLEZZI,
