--- a/elementos-textuais/teoria-integracao.tex
+++ b/elementos-textuais/teoria-integracao.tex
@@ -1,5 +1,5 @@
 \chapter{Teoria da Integração}
-Uma vez que já foram bem explorados os espaços mensuráveis e os espaços de medida, vamos medir funções mensuráveis de fato.
+Uma vez que já foram bem explorados os espaços mensuráveis e os espaços de medida, vamos abordar, nesta seção, a teoria da integração de Lebesgue.
 Iniciaremos por funções não negativas e iremos estendendo os conceitos aos poucos.
 Quando não houver menção contrária, $(X, \cc, \mu)$ será um espaço de medida.
 O conjunto de todas as funções $f:X \to \xreta$ mensuráveis será simplesmente denotado por $M = M(X, \cc)$ e o conjunto das funções não negativas, que também são $\cc$-mensuráveis será denotado por $M^+ = M^+(X, \cc)$. 
@@ -8,36 +8,20 @@ O conjunto de todas as funções $f:X \to \xreta$ mensuráveis será simplesment
 	Iniciaremos tratando de casos particulares de integral e depois vamos expandindo.
 	Com isso, iniciaremos entendo a integral para funções simples.
 
-
-\begin{definition}[Função Simples]
+\begin{env}{Definição}
     Uma função real é dita simples quando possui apenas uma quantidade finita de valores.
-\end{definition}
+\end{env}
 
-\begin{remark}
-\label{obs:Representação-padrão}
-Representaremos esse tipo de função, de forma padronizada em todo o texto, por meio da seguinte forma
+Representaremos esse tipo de função de forma padronizada em todo o texto.
+Faremos isso por meio da seguinte forma
 $$
 \varphi =  \sum_{j = 1}^n a_j\chi_{E_j}
 $$
 onde $a_j \in \R$ e $\chi_{E_j}$ é a função característica do conjunto $E_j \in \cc$.
-Nessa representação estamos supondo que cada $a_j \in \R$ é diferente para todo $j \in \N$ e que
-$\displaystyle \bigcup_{j = 1}^n E_j = X$.
-%As vezes, esse tipo de função também é chamado de função escada pelo formato de seu gráfico conforme veremos adiante.	
-\end{remark}
+Nessa representação estamos supondo que cada $a_j \neq a_i$ quando $j \neq i$ e que
+$\displaystyle \bigcup_{j = 1}^n E_j = X$ onde a sequência finita de conjuntos $(E_n)$ formam uma partição do conjunto $X$.
 
-
-\begin{example}
-\label{ex:função-escada-part-1}
-    Seja $f: [0,4] \to \R$ pondo $f(x) = 1$ se $x \in [0,2)$ e $f(x) = 2$ caso $x \in [2,4]$.
-    Denotando $E_1 = [0,2), E_2 = [2,4], a_1 = 1$ e $a_2 = 2$ temos que
-    $$
-    f(x) = 1\cdot \chi_{[0,2)}(x) + 2\cdot \chi_{[2,4]}(x) = \sum_{j = 1}^2 a_j\chi_{E_j}(x)
-    $$
-    Além disso, $E_1 \cup E_2 = [0,2) \cup [2, 4] = [0,4]$ e $a_1 = 1\neq 2 = a_2$.
-    Logo, $f$ é uma função simples. 
-\end{example}
-
-\begin{example}
+\begin{env}{Exemplo}
 \label{ex:função-escada-part-2}
 
     Seja $g: [0,4] \to \R$ pondo 
@@ -52,9 +36,9 @@ $\displaystyle \bigcup_{j = 1}^n E_j = X$.
     $$
     Claramente, $g$ também é uma função simples.
     Basta denotar 
-    $E_1 = [0,1),
-     E_2 = [1,2), 
-     E_3 = [2,3),
+    $E_1 = [0,1),\ 
+     E_2 = [1,2),\   
+     E_3 = [2,3),\  
      E_4 = [3,4]$ e 
      $ a_i = i$ para $1 \leq i \leq 4$.
     Com isso, vemos que para $x \in [0,4]$
@@ -62,68 +46,37 @@ $\displaystyle \bigcup_{j = 1}^n E_j = X$.
     g(x) = 1\cdot \chi_{[0,1]}(x) + 2\cdot \chi_{(1,2]}(x) + 3\cdot \chi_{(2,3]}(x) + 4\cdot \chi_{(3,4]}(x)
     $$
     Concluindo que $g = \dsum_{j = 1}^4 a_j\chi_{E_j}$. 
-\end{example}
-Note que os gráficos das funções $f$ e $g$ são, respectivamente.\\
+\end{env}
 
-    % Gráfico da função f
-    \begin{figure}[h!]
-	\centering
-	\Caption{\label{fig:gráfico-função-simples-f-sobre-[0,4]} Gráfico da Função $f =\dsum_{j = 1}^2 a_j\chi_{E_j}$}	
-	\UECEfig{}{
-	    \begin{tikzpicture}[scale=0.7]
-                % Eixos
-                \draw[->] (-1,0) -- (5,0) node[right] {$x$};
-                \draw[->] (0,-1) -- (0, 5) node[left] {$y$};
-                                
-                % Plot do gráfico
-                \draw[domain=0:2,very thick,variable=\x,blue] plot ({\x},{1});
-                \draw[domain=2:4,very thick,variable=\x,blue] plot ({\x},{2});
-        
-                % Bolinhas de intervalos aberto e fechado
-                \draw[fill=white] (2,1) circle (0.08);
-                \draw[fill=blue] (2,2) circle (0.08);
-
-                % Rótulos
-                \foreach \i in {-1,1,2,3,4}{
-                \draw (\i,2pt)--(\i, -2pt) node[below]{{\footnotesize $\i$}};
-                }
-                
-                \foreach \i in {-1,1,2,3,4}{
-                \draw (2pt,\i)--(-2pt, \i) node[left]{{\footnotesize $\i$}};
-                }
-                % Linhas trastejadas
-                % \draw[dashed, help lines] (2,0) -- (2,2);
-                % \draw[dashed, help lines] (4,0) -- (4,2);
-                
-            \end{tikzpicture}
-	}{
-	    \Fonte{Elaborado pelo autor}
-	}	
-    \end{figure}    
+  
     \begin{figure}[h!]
 	\centering
 	\Caption{\label{fig:gráfico-função-simples-g-sobre-[0,4]} Gráfico da Função $g =\dsum_{j = 1}^4 a_j\chi_{E_j}$}	
 	\UECEfig{}{
 	    \begin{tikzpicture}[scale=0.7]
+				
+				\draw[thick] (-2,-2) rectangle (6, 6);
                 % Eixos
                 \draw[->] (-1,0) -- (5,0) node[right] {$x$};
                 \draw[->] (0,-1) -- (0, 5) node[left] {$y$};
                                 
                 % Plot do gráfico
                 \draw[domain=0:1,very thick,variable=\x,blue] plot ({\x},{1});
-                \draw[domain=1:2,very thick,variable=\x,blue] plot ({\x},{2});
-                \draw[domain=2:3,very thick,variable=\x,blue] plot ({\x},{3});
-                \draw[domain=3:4,very thick,variable=\x,blue] plot ({\x},{4});
-        
-                % Bolinhas de intervalos aberto e fechado
-                \foreach \i in {1,2,3}{
-                \draw[fill=blue] (\i,\i+1) circle (0.08);
-                }
-                \foreach \i in {1,2,3}{
-                \draw[fill=white] (\i,\i) circle (0.08);
-                }
-
-                
+                \draw[domain=1:2.5,very thick,variable=\x,blue] plot ({\x},{3});
+                \draw[domain=2.5:3.25,very thick,variable=\x,blue] plot ({\x},{4});
+                \draw[domain=3.25:4,very thick,variable=\x,blue] plot ({\x},{2});
+        		
+        		% Bolinhas dos Intervalos
+        		\draw[fill=blue] (0,1) circle (0.08);
+        		\draw[fill=blue] (1,3) circle (0.08);
+        		\draw[fill=blue] (2.5,4) circle (0.08);
+        		\draw[fill=blue] (3.25,2) circle (0.08);
+        		
+        		\draw[fill=white] (1,1) circle (0.08);
+        		\draw[fill=white] (2.5,3) circle (0.08);
+        		\draw[fill=white] (3.25,4) circle (0.08);
+        		\draw[fill=white] (4,2) circle (0.08);
+        		                
 
                 % Rótulos
                 \foreach \i in {-1,1,2,3,4}{
@@ -148,76 +101,40 @@ Note que os gráficos das funções $f$ e $g$ são, respectivamente.\\
     \end{figure} 
 Agora pensemos na ideia de integral apresentada na disciplina de Cálculo Diferencial e Integral.
 Se quiséssemos calcular a integral das funções acima somaríamos as áreas dos retângulos conforme ilustram as figuras a seguir.\\
-    % Integral da função f
-    \begin{figure}[!h]
-	\centering
-	\Caption{\label{fig:integral-função-simples-f-sobre-[0,4]} Área delimitada pelo gráfico da função $f =\dsum_{j = 1}^2 a_j\chi_{E_j}$}	
-	\UECEfig{}{
-	    \begin{tikzpicture}[scale=0.7]
-                % Eixos
-                \draw[->] (-1,0) -- (5,0) node[right] {$x$};
-                \draw[->] (0,-1) -- (0, 5) node[left] {$y$};
-                                
-                % Plot do gráfico
-                \draw[domain=0:2,very thick,variable=\x,blue] plot ({\x},{1});
-                \draw[domain=2:4,very thick,variable=\x,blue] plot ({\x},{2});
-        
-                
-                % Retangulos
-
-                \draw[fill=blue!30, dashed](0,0) rectangle (2,1);
-                \draw[fill=blue!30, dashed](2,0) rectangle (4, 2);
-
-                % Bolinhas de intervalos aberto e fechado
-                \draw[fill=white] (2,1) circle (0.08);
-                \draw[fill=blue] (2,2) circle (0.08);
-
-                % Rótulos
-                \foreach \i in {-1,1,2,3,4}{
-                \draw (\i,2pt)--(\i, -2pt) node[below]{{\footnotesize $\i$}};
-                }
-                
-                \foreach \i in {-1,1,2,3,4}{
-                \draw (2pt,\i)--(-2pt, \i) node[left]{{\footnotesize $\i$}};
-                }
-                % Linhas trastejadas
-                % \draw[dashed, help lines] (2,0) -- (2,2);
-                % \draw[dashed, help lines] (4,0) -- (4,2);
-                
-            \end{tikzpicture}
-	}{
-	    \Fonte{Elaborado pelo autor}
-	}	
-    \end{figure}
-    \\
+ 
     %Gráfico da função g
     \begin{figure}[!h]
 	\centering
 	\Caption{\label{fig:integral-função-simples-g-sobre-[0,4]} Área delimitada pelo gráfico da função $g =\dsum_{j = 1}^4 a_j\chi_{E_j}$}	
 	\UECEfig{}{
 	    \begin{tikzpicture}[scale=0.7]
+	    	\draw[thick] (-2,-2) rectangle (6, 6);
                 % Eixos
                 \draw[->] (-1,0) -- (5,0) node[right] {$x$};
                 \draw[->] (0,-1) -- (0, 5) node[left] {$y$};
                                 
-                % Plot do gráfico
-                \draw[domain=0:1,very thick,variable=\x,blue] plot ({\x},{1});
-                \draw[domain=1:2,very thick,variable=\x,blue] plot ({\x},{2});
-                \draw[domain=2:3,very thick,variable=\x,blue] plot ({\x},{3});
-                \draw[domain=3:4,very thick,variable=\x,blue] plot ({\x},{4});
+                % Plot do gráfico	
+				\draw[domain=0:1,very thick,variable=\x,blue] plot ({\x},{1});
+				\draw[domain=1:2.5,very thick,variable=\x,blue] plot ({\x},{3});
+				\draw[domain=2.5:3.25,very thick,variable=\x,blue] plot ({\x},{4});
+				\draw[domain=3.25:4,very thick,variable=\x,blue] plot ({\x},{2});
 
-                % Retangulos
-                \foreach \i in {0, 1,2,3}{
-                \draw[fill=blue!30, dashed](\i,0) rectangle (\i+1,\i +1);
-                }
+				
+				\filldraw [domain=0:1,smooth,variable=\x, cyan, fill opacity=0.4]  plot ({\x},{1})--(1,0)--(0,0);
+	            \filldraw [domain=1:2.5,smooth,variable=\x, cyan, fill opacity=0.4]  plot ({\x},{3})--(2.5,0)--(1,0);
+				\filldraw [domain=2.5:3.25,smooth,variable=\x, cyan, fill opacity=0.4]  plot ({\x},{4})--(3.25,0)--(2.5,0);
+				\filldraw [domain=3.25:4,smooth,variable=\x, cyan, fill opacity=0.4]  plot ({\x},{2})--(4,0)--(3.25,0);
                 
-                % Bolinhas de intervalos aberto e fechado
-				\foreach \i in {1,2,3}{
-					\draw[fill=blue] (\i,\i+1) circle (0.08);
-				}
-				\foreach \i in {1,2,3}{
-					\draw[fill=white] (\i,\i) circle (0.08);
-				}
+        		% Bolinhas dos Intervalos
+				\draw[fill=blue] (0,1) circle (0.08);
+				\draw[fill=blue] (1,3) circle (0.08);
+				\draw[fill=blue] (2.5,4) circle (0.08);
+				\draw[fill=blue] (3.25,2) circle (0.08);
+				
+				\draw[fill=white] (1,1) circle (0.08);
+				\draw[fill=white] (2.5,3) circle (0.08);
+				\draw[fill=white] (3.25,4) circle (0.08);
+				\draw[fill=white] (4,2) circle (0.08);
 
 
                 % Rótulos
@@ -241,18 +158,23 @@ Se quiséssemos calcular a integral das funções acima somaríamos as áreas do
 	    \Fonte{Elaborado pelo autor}
 	}	
     \end{figure} 
-Note que em ambos os casos estamos, basicamente, aplicando o valor $a_j$ na medida do conjunto $E_j$ correspondente para $j$ igual ao número de partições do domínio. Com isso, temos a definição a seguir:
-\begin{definition}
+Note que em ambos os casos estamos, basicamente, aplicando o valor $a_j$ na medida do conjunto $E_j$ correspondente onde $j$ é o número de partições do domínio. Com isso, temos a definição a seguir:
+\begin{env}{Definição}
 \label{def:integral-função-naonegativa-simples}
-    Se $\varphi$ é uma função simples de $M^+(X, \cc)$ com a representação apresentada anteriormente, então a integral da função $\varphi$ com respeito à medida $\mu$ é o valor real estendido
+    Se $\varphi$ é uma função simples de $M^+(X, \cc)$ com a representação 
+    $$\varphi =  \sum_{j = 1}^n a_j\chi_{E_j},$$ então a integral da função $\varphi$ com respeito à medida $\mu$ é o valor real estendido
     $$
     \int\varphi d\mu = \sum_{j = 1}^n a_j\mu(E_j).
     $$
-\end{definition}
+\end{env}
 
-Para a definição \ref{def:integral-função-naonegativa-simples} empregamos a convenção que $0 \cdot (+\infty) = 0$.
-Isto é feito para garantir que a função identicamente nula tenha integral nula independentemente da medida ser finita ou não.
+Para a \ref{def:integral-função-naonegativa-simples} empregamos a convenção que $0 \cdot (+\infty) = 0$.
+Isso é feito para garantir que a função identicamente nula tenha integral nula independentemente da medida ser finita ou não.
 A seguir veremos propriedades elementares sobre a integral de funções simples.
+
+\begin{comment}
+	
+
 Antes disso, considere um espaço de medida $(X, \cc, \mu)$.
 Seja  $\{E_n\}$ uma partição de $X$ com $n \in I_5$ conforme a representação a seguir.\pagebreak
 \begin{figure}[h]
@@ -463,23 +385,27 @@ $$
 = \mu(E_3)
 $$
 Pois, $\mu(F_2\cap E_3) = \mu(F_4\cap E_3) = \mu(F_5\cap E_3) = 0$.
+\end{comment}
 
-
-\begin{theorem}
+\begin{env}{Teorema}
 	\label{teo:aritmetica-com-integrais-de-funções-simples}
     Se $\varphi$ e $\psi$ são funções simples do espaço $M^+(X,\cc)$ e $c\geq0$ é uma constante real, então
-    $$
-    \int c\varphi d\mu = c \int \varphi d\mu,
-    $$
-    $$
-    \int (\varphi + \psi) d\mu = \int \varphi d\mu + \int \psi d\mu.
-    $$
-\end{theorem}
+    $
+    \displaystyle \int c\varphi d\mu = c \int \varphi d\mu
+    $
+	e
+    $
+    \displaystyle \int (\varphi + \psi) d\mu = \int \varphi d\mu + \int \psi d\mu.
+    $
+\end{env}
 \begin{prova}
-    Vamos representar as funções simples não negativas por $\varphi = \dsum_{j = 1}^n a_j\chi_{E_j}$ e $\psi = \dsum_{k = 1}^m a_k\chi_{F_k}$.
-    Caso $c = 0$, o resultado é verdadeiro trivialmente. 
+    Representaremos as funções simples não negativas por $\varphi = \dsum_{j = 1}^n a_j\chi_{E_j}$ e $\psi = \dsum_{k = 1}^m b_k\chi_{F_k}$.
+    Primeiro, mostraremos que vale a multiplicação por escalar.
+    Assim, caso $c = 0$, o resultado é verdadeiro trivialmente. 
     Supondo $c> 0$, temos que
     $$\int c \varphi\ d\mu = \dsum_{j = 1}^n c a_j\mu(E_j) = c \dsum_{j = 1}^n a_j\mu(E_j) = c\int \varphi \ d\mu.$$
+    Com isso, concluímos que $\displaystyle \int c \varphi\ d\mu = c\int \varphi \ d\mu.$ 
+    
     Dadas as representações padrão de $\varphi$ e $\psi$, vemos que $\varphi +\psi$ tem a representação 
     $$
     \varphi + \psi = \dsum_{j = 1}^n\dsum_{k = 1}^m(a_j + b_k)\chi_{E_j \cap F_k}.
@@ -551,10 +477,10 @@ Pois, $\mu(F_2\cap E_3) = \mu(F_4\cap E_3) = \mu(F_5\cap E_3) = 0$.
 
 % Lemas para o teorema
 
-\begin{lemma}
+\begin{env}{Lema}
 	\label{lem:medida-da-intersecao-de-um-fixado}
 	Se $\mu$ é uma medida sobre $X$ e fixemos um elemento $A$ de $\cc$, então a função $\lambda$ definida por $\lambda(E) = \mu(A\cap E), \ \forall E \in \cc$ também é uma medida sobre $X$.
-\end{lemma}
+\end{env}
 \begin{prova}
 	Basta mostrar que $\lambda$ satisfaz as condições impostas na definição \ref{def:medida}.
 	Com isso, se $E = \varnothing$, então
@@ -593,11 +519,11 @@ Pois, $\mu(F_2\cap E_3) = \mu(F_4\cap E_3) = \mu(F_5\cap E_3) = 0$.
 	Desta forma, concluímos que a função $\lambda$ acima definida é uma medida.
 \end{prova}
 
-\begin{lemma}
+\begin{env}{Lema}
 	\label{lem:medida-gerada-por-medidas-e-numeros-reais}
 	Se $\mu_1, ..., \mu_n$ são medidas sobre $X$ e $a_1, ... , a_n$ são números reais não negativos, então a função $\lambda$ definida por
 	$\lambda(E) = \dsum_{j =1}^n a_j\mu_j(E), \forall E \in \cc$ também é uma medida sobre $X$.
-\end{lemma}
+\end{env}
 \begin{prova}
 	Como $\mu_j$ é uma medida para todo $j \in I_n$ e cada $a_j$ é maior ou igual à zero, temos que cada $a_j\mu_j(E) \geq 0$.
 	Desta maneira, $\lambda(E) = \displaystyle \sum_{j = 1}^n a_j\mu_j(E) \geq 0$.
@@ -644,14 +570,14 @@ Pois, $\mu(F_2\cap E_3) = \mu(F_4\cap E_3) = \mu(F_5\cap E_3) = 0$.
 	Como $\lambda$ satisfaz todas as condições impostas na definição \ref{def:medida} concluímos que $\lambda$ é uma medida.    
 \end{prova}
 
-\begin{theorem}
+\begin{env}{Teorema}
 	\label{teo:medida-atraves-de-uma-integral}
 	A função $\lambda: \cc \to \xreta$ definida por
 	$
 	\displaystyle\lambda(E) = \int \varphi\chi_E\ d\mu
 	$
 	para todo $E \in \cc$ é uma medida sobre $\cc$. 
-\end{theorem}
+\end{env}
 
 \begin{prova}
 	De maneira análoga ao teorema \ref{teo:aritmetica-com-integrais-de-funções-simples}
@@ -690,7 +616,8 @@ Para facilitar, analisaremos o gráfico dessa função no intervalo $[0,4]$.\\
 	\centering
 	\Caption{\label{fig:gráfico da função sen x + 3} Gráfico da função $f(x) = \textrm{sen}(x) + 3$} 
 	\UECEfig{}{
-		\begin{tikzpicture}
+		\begin{tikzpicture}[scale=0.7]
+			\draw[thick] (-2,-2) rectangle (8, 6);
 			% Eixos
 			\draw[->] (-1,0) -- (5,0) node[right] {$x$};
 			\draw[->] (0,-1) -- (0, 5) node[left] {$y$};
@@ -751,7 +678,8 @@ Assim, ao calcularmos sua integral, vemos não há preenchimento total da área 
 	\centering
 	\Caption{\label{fig: integral da funçao phi 2} Integral da função $\phi_2$} 
 	\UECEfig{}{
-		\begin{tikzpicture}
+		\begin{tikzpicture}[scale=0.7]
+			\draw[thick] (-2,-2) rectangle (8, 6);
 			% Eixos
 			\draw[->] (-1,0) -- (5,0) node[right] {$x$};
 			\draw[->] (0,-1) -- (0, 5) node[left] {$y$};
@@ -786,7 +714,8 @@ Desta forma, com o dobro de valores da função $\phi_2$ escolhida anteriormente
 	\centering
 	\Caption{\label{fig:integral da função phi 4} Integral da função $\phi_4$} 
 	\UECEfig{}{
-		\begin{tikzpicture}
+		\begin{tikzpicture}[scale=0.7]
+			\draw[thick] (-2,-2) rectangle (8, 6);
 			% Eixos
 			\draw[->] (-1,0) -- (5,0) node[right] {$x$};
 			\draw[->] (0,-1) -- (0, 5) node[left] {$y$};
@@ -828,7 +757,8 @@ a_5 = f(2.5), a_6 = f(3), a_7 = f(3.5)$ e $a_8 = f(4)$.\\
 	\centering
 	\Caption{\label{fig:integrla da função phi 8} Integral da função $\phi_8$} 
 	\UECEfig{}{
-		\begin{tikzpicture}
+		\begin{tikzpicture}[scale=0.7]
+			\draw[thick] (-2,-2) rectangle (8, 6);
 			% Eixos
 			\draw[->] (-1,0) -- (5,0) node[right] {$x$};
 			\draw[->] (0,-1) -- (0, 5) node[left] {$y$};
@@ -875,7 +805,8 @@ Assim, se tomarmos o supremo dessas funções obteremos
 	\centering
 	\Caption{\label{fig:Integral da função f} Integral da função $f$} 
 	\UECEfig{}{
-		\begin{tikzpicture}
+		\begin{tikzpicture}[scale=0.7]
+			\draw[thick] (-2,-2) rectangle (8, 6);
 			% Eixos
 			\draw[->] (-1,0) -- (5,0) node[right] {$x$};
 			\draw[->] (0,-1) -- (0, 5) node[left] {$y$};
@@ -940,13 +871,13 @@ Note que a função $\phi_1$ é simples, mas seus valores são escolhidos por me
 			
 			
 			% Função $\phi_1$
-			\draw[domain=-0.71:0.71,smooth,variable=\x,thick, green]  plot ({\x},{0});
+			\draw[domain=-0.71:0.71,smooth,variable=\x,thick, blue]  plot ({\x},{0});
 			
-			\draw[domain=-1:-0.71,smooth,variable=\x,thick, green]  plot ({\x},{0.5});
-			\draw[domain=0.71:1,smooth,variable=\x,thick, green]  plot ({\x},{0.5});
+			\draw[domain=-1:-0.71,smooth,variable=\x,thick, blue]  plot ({\x},{0.5});
+			\draw[domain=0.71:1,smooth,variable=\x,thick, blue]  plot ({\x},{0.5});
 			
-			\draw[domain=-2:-1,smooth,variable=\x,thick, green]  plot ({\x},{1});
-			\draw[domain=1:2,smooth,variable=\x,thick, green]  plot ({\x},{1});
+			\draw[domain=-2:-1,smooth,variable=\x,thick, blue]  plot ({\x},{1});
+			\draw[domain=1:2,smooth,variable=\x,thick, blue]  plot ({\x},{1});
 			
 			% Retas auxiliares
 			\draw[dashed] (-0.71,0.09) -- (-0.71,0.5);
@@ -963,14 +894,14 @@ Note que a função $\phi_1$ é simples, mas seus valores são escolhidos por me
 			\draw[fill=white] (-0.71,0) circle (0.03);
 			\draw[fill=white] (0.71,0) circle (0.03);
 			
-			\draw[fill=green] (-0.71,0.5) circle (0.03);
-			\draw[fill=green] (0.71,0.5) circle (0.03);
+			\draw[fill=blue] (-0.71,0.5) circle (0.03);
+			\draw[fill=blue] (0.71,0.5) circle (0.03);
 			
 			\draw[fill=white] (-1,0.5) circle (0.03);
 			\draw[fill=white] (1,0.5) circle (0.03);
 			
-			\draw[fill=green] (-1,1) circle (0.03);
-			\draw[fill=green] (1,1) circle (0.03);
+			\draw[fill=blue] (-1,1) circle (0.03);
+			\draw[fill=blue] (1,1) circle (0.03);
 			
 		\end{tikzpicture}
 		
@@ -983,7 +914,7 @@ Na figura acima, o gráfico da função $\phi_1$ está representado pela cor ver
 
 Dito isto, adiante formalizaremos que dada uma função $f \in \menfus$, então ela pode ser aproximada por uma sequência de funções simples conforme o teorema
 
-\begin{theorem}[Aproximação Via Funções Simples]
+\begin{env}{Teorema}[Aproximação Via Funções Simples]
 	\label{teo:aproximação via funções simples}
 	Se $f$ é uma função não negativa em $\menfus$, então existe uma sequência de funções $(\varphi_n) \subset \menfus$ tal que
 	\begin{enumerate}[label*=(\roman*)]
@@ -991,7 +922,7 @@ Dito isto, adiante formalizaremos que dada uma função $f \in \menfus$, então 
 		\item $0 \leq \varphi_n(x) \leq f(x)$ para todo $x \in X$ e $n \in \N$;
 		\item $\displaystyle\lim_{n \to \infty} \varphi_n(x) = f(x)$ para todo $x \in X$.
 	\end{enumerate}
-\end{theorem} 
+\end{env} 
 
 \begin{prova}
 	Vamos mostrar a existência das sequência por construção.
@@ -1036,34 +967,34 @@ Dito isto, adiante formalizaremos que dada uma função $f \in \menfus$, então 
 
 Esse teorema nos mostra que dada qualquer função não negativa mensurável, podemos aproximar seus valores por funções simples de maneira que o limite dessa sequência de funções simples convergem para a função que tomamos inicialmente.
 Diante disso, nada mais natural que definir a integral de Lebesgue para funções não negativas quaisquer da maneira que segue
-\begin{definition}
+\begin{env}{Definição}
 	\label{def:integral de uma função qualquer não negativa}
 	Se $f \in M^+(X,\cc)$, nós definimos a integral de $f$ com respeito à medida $\mu$ sendo o valor real estendido
 	$$
 	\int f d\mu = sup \int \varphi d\mu
 	$$
 	Onde o supremo é sobre todas as funções simples $\varphi \in \menfus$ tal que a condição $0 \leq \varphi \leq f(x)$ para todo $x \in X$. 
-\end{definition}
+\end{env}
 
-\begin{definition}
+\begin{env}{Definição}
 	\label{def: integral de uma função não neg com respeito a um conjunto específico}
 	Se $f \in \menfus$ e $E \in \cc$, então $f\chi_{E} \in \menfus$ e nós definimos a integral de $f$ sobre o conjunto $E$ com respeito à medida $\mu$ como sendo o número real estendido
 	$$
 	\int_E f d\mu = \int f\chi_E d\mu
 	$$
-\end{definition}
+\end{env}
 
 Agora desejamos realizar operações aritméticas com essa expansão da definição conforme fizemos para a integral de funções simples.
 Para tal, precisamos mostrar a monoticidade da integral de funções não negativas tanto à respeito de uma outra função integral quanto à um conjunto.
 Isso faremos por meio dos lemas a seguir
 
-\begin{lemma}
+\begin{env}{Lema}
 	\label{lem:monoticiadade da integral de funções não negativas}
 	Se $f$ e $g$ são elementos de $M^+(X,\cc)$ com $f \leq g$, então 
 	$$
 	\int fd\mu \leq \int g d\mu.
 	$$
-\end{lemma}
+\end{env}
 \begin{prova}
 	Se $\varphi$ é uma função simples em $M^+(X,\cc)$ tal que 
 	$0 \leq \varphi \leq f$, então $0 \leq \varphi \leq g$, uma vez que $f \leq g$.
@@ -1078,13 +1009,13 @@ Isso faremos por meio dos lemas a seguir
 	$$
 	
 \end{prova}
-\begin{lemma}
+\begin{env}{Lema}
 	\label{lem:monoticiadade da integral com conjunto em funções não negativas}
 	Se $f$ é um elemento de $M^+(X,\cc)$ e $E,F \in \cc$ com $E \subseteq F$, então 
 	$$
 	\int_E fd\mu \leq \int_F f d\mu.
 	$$
-\end{lemma}
+\end{env}
 \begin{prova}
 	Como $E \subseteq F$, então $chi_E \leq \chi_F$.
 	Assim, $fchi_E \leq f\chi_F$.
@@ -1105,13 +1036,13 @@ Isso faremos por meio dos lemas a seguir
 	$
 \end{prova}
 
-\begin{theorem}[Teorema da Convergência Monótona]
+\begin{env}{Teorema}[Teorema da Convergência Monótona]
 	\label{teo:Convergencia Monótona}
 	Se $(f_n)$ é uma sequência monótona crescente de funções não negativas mensuráveis que converge para a $f$, então
 	$$
 	\int f d\mu = \dlim_{n \to \infty} \int f_n d\mu
 	$$
-\end{theorem}
+\end{env}
 \begin{prova}
 	Pelo corolário \ref{cor:convergencia-de-uma-sequencia-mensuravel}, se temos uma sequência de funções mensuráveis que converge para uma função $f$, então $f$ também é mensurável.
 	Além disso,
@@ -1183,12 +1114,12 @@ Isso faremos por meio dos lemas a seguir
 
 O teorema anterior nos permite mostrar as operações aritméticas para integral de Lebesgue para funções não negativas quaisquer como apresentaremos adiante.
 
-\begin{corollary}
+\begin{env}{Corolário}
 	Se $f \in M^+$ e $c \geq 0$, então $cf \in M^+$ e vale
 	$$
 	\int cf d\mu = c\int f d\mu.
 	$$
-\end{corollary}
+\end{env}
 
 
 \begin{prova}
@@ -1209,13 +1140,13 @@ O teorema anterior nos permite mostrar as operações aritméticas para integral
 \end{prova}
 
 
-\begin{corollary}
+\begin{env}{Corolário}
 	\label{cor:soma de integrais de funções não negativas}
 	Se $f, g \in M^+$, então $f + g \in M^+$ e vale
 	$$
 	\int (f + g) d\mu = \int f d\mu + \int g d\mu.
 	$$ 	
-\end{corollary}
+\end{env}
 
 \begin{prova}
 	Analogamente ao corolário anterior, tomemos duas sequências de funções simples $(\varphi_n)$ e $(\psi_n)$ ambas monótonas e crescentes tal que convergem, respectivamente, para $f$ e $g$.
@@ -1232,12 +1163,12 @@ O teorema anterior nos permite mostrar as operações aritméticas para integral
 Note que os resultados tratam apenas de funções monótonas e nem sempre teremos essa condição \enquote{perfeita} para nossas sequências.
 Assim, o próximo resultado nos apresenta uma maneira de trabalhar com sequências que não são monótonas.
 
-\begin{theorem}[Lema de Fatou]
+\begin{env}{Teorema}[Lema de Fatou]
 	\label{teo:lema de fatou}
 	Se $(f_n) \subset M^+(X, \cc)$, então 
 	$\displaystyle
 	\int(\lim \inf f_n)d\mu \leq \lim \inf \int f_n d\mu$. 
-\end{theorem}
+\end{env}
 \begin{prova}
 	Tome a sequência $g_m = \inf_{n \in \N}\{f_m, f_{m+1},...\}$.
 	Assim, enquanto $m\leq n$ nós temos $g_m \leq f_n$.
@@ -1255,13 +1186,13 @@ Assim, o próximo resultado nos apresenta uma maneira de trabalhar com sequênci
 	$$ 
 \end{prova}
 
-\begin{corollary}
+\begin{env}{Corolário}
 	Se $f \in M^+$ e $\lambda$ é definida sobre $\cc$ pondo
 	$
 	\lambda(E) = \int_E fd\mu 
 	$,
 	então $\lambda$ é uma medida.
-\end{corollary}
+\end{env}
 
 \begin{prova}
 	Uma vez que $f \geq 0$, obtemos que $\lambda(E) \geq 0$, por definição.
@@ -1283,16 +1214,16 @@ Assim, o próximo resultado nos apresenta uma maneira de trabalhar com sequênci
 
 %%%%%%%%% Definir QUASE TODO PONTO
 
-\begin{definition}
+\begin{env}{Definição}
 	\label{def:quase-todo-ponto}
 	Diremos que alguma propriedade ocorre em quase todo ponto de um conjunto $X$ com respeito à medida $\mu$, se ela não é valida somente em um subconjunto $E$ de $X$ que tem medida nula.
 	Denotaremos esse acontecimento por $\mu$-q.t.p.
-\end{definition}
+\end{env}
 
-\begin{corollary}
+\begin{env}{Corolário}
 	Suponha que $f \in M^+$. Então
 	$f(x) = 0$ em quase todo ponto de $X$ se, e somente se $\displaystyle \int fd\mu = 0$.
-\end{corollary}
+\end{env}
 
 \begin{prova}
 	Suponha $f(x) = 0$ $\mu$-q.t.p.
@@ -1340,14 +1271,14 @@ Assim, o próximo resultado nos apresenta uma maneira de trabalhar com sequênci
 \end{prova}
 Finalizaremos esta subseção apresentando um corolário do Teorema da Convergência Monótona que enfatiza claramente a diferença entre a Integral de Riemann e a Integral de Lebesgue.
 
-\begin{corollary}
+\begin{env}{Corolário}
 	Se $(g_n)$ é uma sequência de funções em $M^+$, então 
 	$$
 	\int \left(\dsum_{n = 1} ^\infty g_n\right)d\mu
 	=
 	\dsum_{n = 1} ^\infty \left(\int g_n d\mu\right).
 	$$
-\end{corollary}
+\end{env}
 \begin{prova}
 	O resultado sai imediatamente da aplicação do Teorema da Convergência Monótona considerando a sequência de funções $(f_n) \subset M^+$ tais que
 	$f_n = g_1 + \cdots + g_n  $.
@@ -1356,7 +1287,7 @@ Finalizaremos esta subseção apresentando um corolário do Teorema da Convergê
 Definimos anteriormente apenas integrais de funções não negativas com respeito à uma medida $\mu$.
 Nesta estenderemos, finalmente, este conceito para uma função qualquer de valores reais estendidos. Com isso,
 
-\begin{definition}
+\begin{env}{Definição}
 	Seja $L = (X, \cc, \mu)$ a coleção de funções integráveis que consiste de todas as funções reais $\cc$-mensuráveis $f:X \to \R$ tais que as funções
 	$f^+$ e $f^-$ são ambas integrais finitas com respeito à medida $\mu$.
 	Neste caso, nós definimos a integral de $f$ com respeito à medida $\mu$ como
@@ -1369,12 +1300,12 @@ Nesta estenderemos, finalmente, este conceito para uma função qualquer de valo
 	\int_E fd\mu
 	= \int_E f^+ d\mu - \int_E f^- d\mu
 	$$
-\end{definition}
+\end{env}
 
-\begin{theorem}
+\begin{env}{Teorema}
 	\label{teo:f é integrável se, só, se |f| o é}
 	Uma função mensurável $f$ é um elemento de $L$ se, e somente se, $|f|$ é um elemento de $L$.
-\end{theorem}
+\end{env}
 
 \begin{prova}
 	Suponha que $f \in L$.
@@ -1400,9 +1331,9 @@ Nesta estenderemos, finalmente, este conceito para uma função qualquer de valo
 	A recíproca é totalmente análoga.	
 \end{prova}
 
-\begin{corollary}
+\begin{env}{Corolário}
 	Se $|f| \in L$, então $\displaystyle \left|\int f d\mu\right| \leq \int |f| d\mu$.
-\end{corollary}
+\end{env}
 \begin{prova}
 	Se $|f| \in L$, então $f \in L$ pelo teorema anterior.
 	Logo $\int f^+ d\mu$ e $\int f^- d\mu$ são finitas e não negativas.
@@ -1425,10 +1356,10 @@ Nesta estenderemos, finalmente, este conceito para uma função qualquer de valo
 	Portanto, $\displaystyle \left|\int f d\mu \right| \leq  \int |f| d\mu.$
 \end{prova}
 
-\begin{corollary}
+\begin{env}{Corolário}
 	\label{cor: f é mensurável, g é integrável então f é integrável}
 	Se $f$ é mensurável, $g$ é integrável e $|f| \leq |g|$, então  $f$ é integrável e $\displaystyle \int |f| d\mu \leq \int |g| d\mu$.
-\end{corollary}
+\end{env}
 \begin{prova}
 	Se $f$ é mensurável, então para uma medida $\mu$ definida sobre $(X,\cc)$, tem-se que $f \in L$. Assim, pelo teorema \ref{teo:f é integrável se, só, se |f| o é} tem-se que $|f|$ é integrável.
 	Como $|f|$ e $|g|$ são função não negativas, segue pelo lema
@@ -1437,14 +1368,14 @@ Nesta estenderemos, finalmente, este conceito para uma função qualquer de valo
 \end{prova}
 
 
-\begin{theorem}
+\begin{env}{Teorema}
 	\label{teo: soma e multiplicação por escalar de funções integráveis}
 	Se $f, g \in L$ e $\alpha \in \R$. Então
 	\begin{enumerate}[label*=(\alph*)]
 		\item A multiplicação por escalar $\alpha f \in L$ com $\displaystyle \int \alpha fd\mu = \alpha \int f d\mu$;
 		\item A soma $(f + g) \in L$ com $\displaystyle \int (f + g) d\mu = \int f d\mu + \int g d\mu$. 
 	\end{enumerate}
-\end{theorem}
+\end{env}
 \begin{prova}
 	\begin{enumerate}[label*=(\alph*)]
 	\item Se $\alpha = 0$, então $\alpha f = 0$ em todo ponto de seu domínio.
@@ -1501,10 +1432,10 @@ Nesta estenderemos, finalmente, este conceito para uma função qualquer de valo
 	\end{enumerate}
 \end{prova}
 
-\begin{theorem}[Teorema da Convergência Dominada de Lebesgue]
+\begin{env}{Teorema}[Teorema da Convergência Dominada de Lebesgue]
 	Seja $(f_n)$ uma sequência de funções integráveis que converge em quase todo ponto para uma uma função real mensurável $f$.
 	Se existir uma função integrável $g$ tal que $|f_n| \leq g$ para todo $n \in \N$, então $f$ é integrável e $\displaystyle \int f d\mu = \dlim_{n \to +\infty} \int f_n d\mu$.
-\end{theorem}
+\end{env}
 
 \begin{prova}
 	Se $(f_n)$ converge em quase todo ponto para a função $f$ e $|f_n| \leq g$ para cada $n \in \N$, então $f \leq g$ em quase todo ponto.
